--- a/config.yaml
+++ b/config.yaml
@@ -1,8 +1,8 @@
 house_pricing:
-  train_dataset: D:\data\spbu_ai_fundamentals\house_prices\train.csv
-  test_dataset: D:\data\spbu_ai_fundamentals\house_prices\test.csv
+  train_dataset: /Users/alicee/Desktop/Work_Main/spbu-ai-fundamentals/datasets/kaggle_house_prices/train.csv
+  test_dataset: /Users/alicee/Desktop/Work_Main/spbu-ai-fundamentals/datasets/kaggle_house_prices/test.csv
 classification:
-  wdbc: D:\data\spbu_ai_fundamentals/classification/data.csv
-  mushrooms: D:\data\spbu_ai_fundamentals/classification/mushrooms.csv
+  wdbc: /Users/alicee/Desktop/Work_Main/spbu-ai-fundamentals/datasets/wdbc/data.csv
+  mushrooms: /Users/alicee/Desktop/Work_Main/spbu-ai-fundamentals/datasets/mushrooms.csv
 clustering:
-  flowcytometry: D:\data\spbu_ai_fundamentals/flow_cytometry
+  flowcytometry: /Users/alicee/Desktop/Work_Main/spbu-ai-fundamentals/datasets/flowcytometry
