--- a/config.yaml
+++ b/config.yaml
@@ -5,4 +5,4 @@ classification:
   wdbc: /Users/alicee/Desktop/Work_Main/spbu-ai-fundamentals/datasets/wdbc/data.csv
   mushrooms: /Users/alicee/Desktop/Work_Main/spbu-ai-fundamentals/datasets/mushrooms.csv
 clustering:
-  flowcytometry: D:\data\spbu_ai_fundamentals/flow_cytometry
+  flowcytometry: /Users/alicee/Desktop/Work_Main/spbu-ai-fundamentals/datasets/flowcytometry
